# inky-alarm

./: LICENSE  README.md  WiFi_Check  pyproject.toml
alarm/: alarm.py
alarm-webapp/: .gitignore  alarm-webapp.service  faviconDescription.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
alarm-webapp/icons/: browserconfig.xml  site.webmanifest
alarm-webapp/server/: server.js
alarm-webapp/src/: App.vue  api.js  main.css
alarm-webapp/src/components/: Card.vue  DaysSelection.vue  HelloWorld.vue  Message.vue  NumberInput.vue  Time.vue  Toggle.vue
alarm-webapp/src/composables/: useAlarms.js  useMessages.js
alarm-webapp/src/utils/: iconComptbl.js
display/: .gitignore  README.md  display.py  display.service  get_next_alarm.py  icon_map.py  mask.py  weather.py
time/: time.py  time.service
