[tool.poetry]
name = "inky-alarm"
version = "0.1.0"
description = ""
authors = ["peteruithoven <peter@peteruithoven.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
font-fredoka-one = "^0.0.4"
inky = "^2.0.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
adafruit-circuitpython-ht16k33 = "^4.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
